--- a/q1.html
+++ b/q1.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>manodya</h1>
+        <h2>manodya</h2>
+        <h3>manodya</h3>
+        <h4>manodya</h4>
+        <h5>manodya</h5>
+        <h6>manodya</h6>
     </body>
 </html>
