--- a/q1.html
+++ b/q1.html
@@ -4,12 +4,75 @@
             praveen
         </title>
     </head>
-    <body>
+    <body style="background-image: ;">
         <h1>manodya</h1>
         <h2>manodya</h2>
         <h3>manodya</h3>
         <h4>manodya</h4>
         <h5>manodya</h5>
         <h6>manodya</h6>
+        <p>H2O</p>
+        <p>H<sub>2</sub>O</p>
+        <p>22<sup>nd</sup>of june,2023</p>
+        <ul>
+            <li>cofee</li>
+            <li>tea</li>
+            <li>mike</li>
+        </ul>
+        <ol>
+            <li>cofee</li>
+            <li>tea</li>
+            <li>mike</li>
+        </ol>
+        <ol>
+            <li>Sri Lanka</li>
+            <ol>
+                <li>colombo</li>
+                <li>Kandy</li>
+            </ol>
+        </ol>
+        <table style="width: 100%;height: 100%;" border="10" align="center" bgcolor="pink" bordercolor="green" cellspacing="2" cellpadding="1">
+            <tr bgcolor="yellow">
+                <th >index</th>
+                <th>student name</th>
+                <th>marks</th>
+            </tr>
+            <tr>
+                <td bgcolor="black">01</td>
+                <td align="center" >anee</td>
+                <td align="center">89</td>
+            </tr>
+            <tr>
+                <td bgcolor="black">02</td>
+                <td align="center">ben</td>
+                <td align="center">76</td>
+            </tr>
+            <tr>
+                <td bgcolor="black">03</td>
+                <td align="center">chari</td>
+                <td align="center">64</td>
+            </tr>
+            <tr>
+                <td colspan="3" align="center">04</td>
+            </tr>
+            <tr>
+                <td rowspan="3">05</td>
+                <td>masha</td>
+                <td>80</td>
+            </tr>
+            <tr>
+                <td>06</td>
+                <td>kamal</td>
+            </tr>
+            <tr>
+                <td>07</td>
+                <td>dilmi</td>
+            </tr>    
+        </table>
+       
+        <img src="https://img.freepik.com/free-photo/girl-wearing-bikini-posing_273443-987.jpg" alt="sexy gril" style="width: 100%;height: 100%;">
+        <a href="https://www.google.com/search?q=background&tbm=isch&ved=2ahUKEwiJr4PJhNWBAxUh2zgGHaGIAaQQ2-cCegQIABAA&oq=back&gs_lcp=CgNpbWcQARgAMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBwgAEIoFEEMyBwgAEIoFEEMyBwgAEIoFEEMyBQgAEIAEMgUIABCABDoECCMQJzoGCAAQBxAeUK0PWOUfYJkoaABwAHgAgAGkAYgBnAWSAQMxLjSYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=734ZZcn7GaG24-EPoZGGoAo&bih=707&biw=1536&rlz=1C1CHBF_enLK1029LK1035#imgrc=NC2I32BwnL9BPM">clik here</a>
+        
     </body>
+
 </html>
